Fix Java 21 warnings: TCK resource leaks + URL(String) deprecation
- AbstractPersistenceTCK: countAndExist/deleteRemovesPersistedObjects
  close their PersistenceResource via try-with-resources (resource-leak
  warnings on the AutoCloseable casts).
- ComprehensiveTypeConverter(+Test): new URL(String) is deprecated
  since Java 20 — construct via java.net.URI (qualified once, the EMF
  URI import owns the simple name); malformed inputs keep the
  null-with-warning contract (URISyntaxException/IllegalArgumentException
  covered).

Signed-off-by: Mark Hoffmann <m.hoffmann@data-in-motion.biz>
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>